--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>미국에서 엔지니어들의 영어 표현 공부</title>
+    <title>미국 엔지니어들의 영어 표현 공부</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -449,13 +449,13 @@
             <p><strong>
                 Throw Under The Bus
             </strong></p>
-            <p>
-                "Throw under the bus"는 영어 표현으로, 누군가를 어려운 상황에서 혼자 책임을 지도록 내몰거나 희생시키는 것을 의미합니다. 이 표현은 흔히 누군가의 잘못이나 실패를 다른 사람에게 돌리는 행위를 가리키며, 그 사람을 불리한 상황에 놓게 하거나 불이익을 주는 것을 포함합니다.
+                <p>
+                    "Throw under the bus"는 영어 표현으로, 누군가를 어려운 상황에서 혼자 책임을 지도록 내몰거나 희생시키는 것을 의미합니다. 이 표현은 흔히 누군가의 잘못이나 실패를 다른 사람에게 돌리는 행위를 가리키며, 그 사람을 불리한 상황에 놓게 하거나 불이익을 주는 것을 포함합니다.
 
-                예를 들어, 상사가 팀원 중 한 명의 실수로 인해 문제가 발생했을 때, 그 상사가 그 팀원을 "throw under the bus"하면, 그 팀원에게 전적으로 책임을 돌리고 자신은 어떠한 책임도 지지 않으려고 할 수 있습니다. 이는 누군가를 희생하여 자신의 입장을 지키기 위한 비도덕적인 행동이라고 볼 수 있습니다.
-                
-                이 표현은 주로 비형식적인 상황에서 사용되며, 사회적으로 좋지 않은 행동이라고 여겨집니다. 협력과 공정한 태도를 중요시하는 상황에서는 오히려 문제를 해결하고 동료들과 협력하여 더 나은 결과를 이끌어내는 것이 바람직합니다.
-            </p>
+                    예를 들어, 상사가 팀원 중 한 명의 실수로 인해 문제가 발생했을 때, 그 상사가 그 팀원을 "throw under the bus"하면, 그 팀원에게 전적으로 책임을 돌리고 자신은 어떠한 책임도 지지 않으려고 할 수 있습니다. 이는 누군가를 희생하여 자신의 입장을 지키기 위한 비도덕적인 행동이라고 볼 수 있습니다.
+                    
+                    이 표현은 주로 비형식적인 상황에서 사용되며, 사회적으로 좋지 않은 행동이라고 여겨집니다. 협력과 공정한 태도를 중요시하는 상황에서는 오히려 문제를 해결하고 동료들과 협력하여 더 나은 결과를 이끌어내는 것이 바람직합니다.
+                </p>
             </li>
             </li>
                 <p><strong>
@@ -473,12 +473,12 @@
                     한 마디로 '앞서 나가는' 이점이라는 뜻으로 이해하시면 될 것 같습니다.
                 </p>
             </li>
-            </li>
             <!-- 이곳에 더 많은 표현을 추가할 수 있습니다 -->
         </ul>
     </main>
     <footer>
         &copy; 2023 영어 표현 공부. All rights reserved.
+        <a href="mailto:stberry7@gmail.com?subject=Hello&body=Nice%20to%20meet%20you">Email me</a>
     </footer>
 </body>
 </html>
