--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <a href="/stberry7.github.io/English.html">버튼 1</a>
+        <a href="English.html">버튼 1</a>
         <a href="#">버튼 2</a>
     </div>
     <div class="content">
