--- a/English.html
+++ b/English.html
@@ -41,6 +41,23 @@
             bottom: 0;
         }
   </style>
+  <style>
+   .home-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: white;
+    background-color: blue;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+.home-button:hover {
+    background-color: darkblue;
+}
+  </style>
  </head>
  <body>
   <header>
