--- a/English.html
+++ b/English.html
@@ -58,6 +58,34 @@
     background-color: darkblue;
 }
   </style>
+  <style>
+   .circle {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    border: 5px solid;
+    animation: circleFadeOut 1s forwards;
+}
+
+@keyframes circleFadeOut {
+    from {transform: scale(0.5); opacity: 1;}
+    to {transform: scale(1.5); opacity: 0;}
+}
+  </style>
+  <style>
+   .message {
+    position: absolute;
+    font-size: 20px;
+    color: red;
+    animation: messageFadeOut 1s forwards;
+}
+
+@keyframes messageFadeOut {
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
+  </style>
  </head>
  <body>
   <header>
@@ -510,5 +538,47 @@
     Email me
    </a>
   </footer>
+  <script>
+   var clickCount = 0;
+document.addEventListener('click', function(e){
+    clickCount++;
+    if (clickCount > 5) {
+        var message = document.createElement('div');
+        message.setAttribute('class', 'message');
+        message.innerText = "아파요~";
+        document.body.appendChild(message);
+        message.style.left = (e.pageX - 50) + 'px';
+        message.style.top = (e.pageY - 50) + 'px';
+
+        var image = document.createElement('img');
+        image.setAttribute('class', 'image');
+        image.src = 'girl.png';
+        document.body.appendChild(image);
+        image.style.left = (e.pageX + 50) + 'px';
+        image.style.top = (e.pageY - 50) + 'px';
+
+        setTimeout(function(){
+            message.parentNode.removeChild(message);
+            image.parentNode.removeChild(image);
+        }, 1000);
+
+        clickCount = 0;
+    }
+
+    var circle = document.createElement('div');
+    circle.setAttribute('class', 'circle');
+    document.body.appendChild(circle);
+
+    circle.style.left = (e.pageX - 50) + 'px';  // Adjusted to consider the size of the circle
+    circle.style.top = (e.pageY - 50) + 'px';  // Adjusted to consider the size of the circle
+
+    var color = '#' + Math.floor(Math.random()*16777215).toString(16);
+    circle.style.borderColor = color;
+
+    setTimeout(function(){
+        circle.parentNode.removeChild(circle);
+    }, 1000);
+});
+  </script>
  </body>
 </html>
