--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
  </head>
  <body>
   <div class="sidebar">
-   <a href="English.html">
+   <a href="english.html">
     버튼 1
    </a>
    <a href="#">
