--- a/english.html
+++ b/english.html
@@ -191,5 +191,36 @@ window.onload = function() {
     });
 }
 </script>
+
+<style>
+/* Increase the font size on screens smaller than 600px (typical size for mobile phones) */
+@media only screen and (max-width: 600px) {
+    body {
+        font-size: 2em;
+    }
+}
+</style>
+
+<script>
+window.onload = function() {
+    var files = ['file1.txt', 'file2.txt', 'file3.txt'];  // Replace these with the actual list of files in the "english" directory
+
+    files.forEach(function(file) {
+        fetch('english/' + file)
+        .then(response => response.text())
+        .then(data => {
+            // Split the text into lines and create a separate paragraph for each line
+            var lines = data.split('\n');
+            for (var i = 0; i < lines.length; i++) {
+                var para = document.createElement("P");
+                var t = document.createTextNode(lines[i]);
+                para.appendChild(t);
+                document.body.appendChild(para);
+            }
+        })
+        .catch(error => console.error(error))
+    });
+}
+</script>
 </body>
 </html>
