--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="ko">
- <head>
-  <meta charset="utf-8"/>
-  <title>
+<head>
+<meta charset="utf-8"/>
+<title>
    영어 표현 공부
   </title>
-  <style>
+<style>
    body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -50,7 +51,7 @@
             width: 80%;
         }
   </style>
-  <style>
+<style>
    .circle {
     position: absolute;
     border: 3px solid;
@@ -79,25 +80,36 @@
     }
 }
   </style>
- </head>
- <body>
-  <div class="sidebar">
-   <a href="english.html">
+<style>
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(84, 84, 243);
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+}
+</style></head>
+<body><img alt="Girl Image" src="image/girl_front1.png"/>
+<div class="sidebar">
+<a href="English.html">
     버튼 1
    </a>
-   <a href="#">
+<a href="#">
     버튼 2
    </a>
-  </div>
-  <div class="content">
-   <h1>
+</div>
+<div class="content">
+<h1>
     환영합니다!
    </h1>
-   <p>
+<p>
     영어 표현을 쉽게 배울 수 있는 웹페이지입니다.
    </p>
-  </div>
-  <script>
+</div>
+<script>
    var clickCount = 0;
 // document.addEventListener('click', function(e){
 //     clickCount++;
@@ -190,5 +202,5 @@ document.addEventListener('click', function(e){
     }
 });
   </script>
- </body>
+<footer class="footer"><p>Copyright © 2023</p></footer></body>
 </html>
