--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     padding: 10px 0;
 }
 </style></head>
-<body>
+<body><img alt="Girl Image 2" src="image/girl_front2.png" style="display: none; margin: auto;"/>
 <div class="sidebar" style="left: -200px; transition: left 0.5s;">
 <a href="English.html">
     버튼 1
