--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
             }, 5000);  // 5 seconds
         });
     </script>
+
+<script>
+    window.onload = function() {
+        var img1 = document.getElementById('img1');
+        var img2 = document.getElementById('img2');
+        
+        img1.style.display = 'block';
+        img2.style.display = 'none';
+
+        img1.addEventListener('load', function() {
+            img1.style.display = 'none';
+            img2.style.display = 'block';
+        });
+
+        img2.addEventListener('load', function() {
+            img1.style.display = 'block';
+            img2.style.display = 'none';
+        });
+    };
+</script>
 </head>
 <body>
 <!DOCTYPE html>
@@ -320,5 +340,8 @@ window.onload = function() {
 
 
     <div id="visitCounter"></div>
+
+<img id="img1" src="image/girl_front1.png" />
+<img id="img2" src="image/girl_front2.png" />
 </body>
 </html>
