--- a/index.html
+++ b/index.html
@@ -71,6 +71,25 @@
         });
     };
 </script>
+
+<script>
+    window.onload = function() {
+        var img1 = document.getElementById('img1');
+        var img2 = document.getElementById('img2');
+
+        img2.style.display = 'none';
+
+        img1.addEventListener('load', function() {
+            img2.style.display = 'block';
+            img1.style.display = 'none';
+        });
+
+        img2.addEventListener('load', function() {
+            img1.style.display = 'block';
+            img2.style.display = 'none';
+        });
+    };
+</script>
 </head>
 <body>
 <!DOCTYPE html>
@@ -366,6 +385,9 @@ window.onload = function() {
         display: none;
     }
 </style>
+<img id="img1" src="image/girl_front1.png" />
+<img id="img2" src="image/girl_front2.png" />
+
 <img id="img1" src="image/girl_front1.png" />
 <img id="img2" src="image/girl_front2.png" />
 </body>
