--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             display: none;
         }
     </style>
-    <script>
+    <!-- <script>
         document.addEventListener('DOMContentLoaded', (event) => {
             let visitCount = localStorage.getItem('visitCount');
             if (!visitCount) {
@@ -33,7 +33,7 @@
                 visitCounter.style.display = 'none';
             }, 5000);  // 5 seconds
         });
-    </script>
+    </script> -->
 
 <script>
     window.onload = function() {
@@ -198,7 +198,7 @@
     padding: 10px 0;
 }
 </style>
-<img alt="Girl Image 2" src="image/girl_front2.png" style="display: none; margin: auto;"/>
+<!-- <img alt="Girl Image 2" src="image/girl_front2.png" style="display: none; margin: auto;"/> -->
 <div class="sidebar" style="left: -200px; transition: left 0.5s;">
 <a href="English.html">
     버튼 1
@@ -214,7 +214,7 @@
 <p>
     영어 표현을 쉽게 배울 수 있는 웹페이지입니다.
    </p>
-<img alt="Girl Image" src="image/girl_front1.png" style="display: none; margin: auto;"/></div>
+<!-- <img alt="Girl Image" src="image/girl_front1.png" style="display: none; margin: auto;"/></div> -->
 <script>
    var clickCount = 0;
 // document.addEventListener('click', function(e){
@@ -387,7 +387,7 @@ window.onload = function() {
 </script>
 
 
-    <div id="visitCounter"></div>
+    <!-- <div id="visitCounter"></div>
 
 <img id="img1" src="image/girl_front1.png" />
 <img id="img2" src="image/girl_front2.png" />
@@ -403,6 +403,6 @@ window.onload = function() {
 <img id="img1" src="image/girl_front1.png" />
 <img id="img2" src="image/girl_front2.png" />
 
-<img id="img" src="image/girl_front1.png" />
+<img id="img" src="image/girl_front1.png" /> -->
 </body>
 </html>
