--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 }
 </style>
 <div class="sidebar" style="left: -200px; transition: left 0.5s;">
-<a href="English.html">
+<a href="english.html">
     버튼 1
    </a>
 <a href="#">
