--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 
 <!DOCTYPE html>
+
 <html>
 <head>
-    <style>
+<style>
         #visitCounter {
             position: fixed;
             top: 50%;
@@ -16,7 +17,7 @@
             display: none;
         }
     </style>
-    <script>
+<script>
         document.addEventListener('DOMContentLoaded', (event) => {
             let visitCount = localStorage.getItem('visitCount');
             if (!visitCount) {
@@ -34,7 +35,6 @@
             }, 5000);  // 5 seconds
         });
     </script>
-
 <script>
     window.onload = function() {
         var img1 = document.getElementById('img1');
@@ -54,7 +54,6 @@
         });
     };
 </script>
-
 <script>
     window.onload = function() {
         var img1 = document.getElementById('img1');
@@ -71,7 +70,6 @@
         });
     };
 </script>
-
 <script>
     window.onload = function() {
         var img1 = document.getElementById('img1');
@@ -90,7 +88,6 @@
         });
     };
 </script>
-
 <script>
     window.onload = function() {
         var img = document.getElementById('img');
@@ -102,7 +99,6 @@
         });
     };
 </script>
-
 <script>
     window.onload = function() {
         var imgs = document.querySelectorAll('.girl');
@@ -118,7 +114,6 @@
         });
     };
 </script>
-
 <script>
     window.onload = function() {
         var img = document.getElementById('img');
@@ -135,7 +130,6 @@
 <!DOCTYPE html>
 
 <html lang="ko">
-
 <meta charset="utf-8"/>
 <title>
    영어 표현 공부
@@ -227,7 +221,7 @@
 }
 </style>
 <div class="sidebar" style="left: -200px; transition: left 0.5s;">
-<a href="english.html">
+<a href="English.html">
     버튼 1
    </a>
 <a href="#">
@@ -366,8 +360,6 @@ window.onload = function() {
     }, 3000);
 };
 </script>
-
-    <div id="visitCounter"></div>
-
-</body>
+<div id="visitCounter"></div>
+</div></html></body>
 </html>
