--- a/english.html
+++ b/english.html
@@ -203,7 +203,7 @@ window.onload = function() {
 
 <script>
 window.onload = function() {
-    var files = ['file1.txt', 'file2.txt', 'file3.txt'];  // Replace these with the actual list of files in the "english" directory
+    var files = ['file1.txt', 'file2.txt', 'file3.txt''file4.xml'];  // Replace these with the actual list of files in the "english" directory
 
     files.forEach(function(file) {
         fetch('english/' + file)
