--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     };
 </script>
 </head>
-<body>
+<body><img src="image/ultrawidefront.jpg" style="width: 100%; height: auto;"/>
 <!DOCTYPE html>
 
 <html lang="ko">
