--- a/english.html
+++ b/english.html
@@ -172,7 +172,7 @@ window.onload = function() {
 
 <script>
 window.onload = function() {
-    var files = ['file1.txt', 'file2.txt', 'file3.txt'];  // This should be the actual list of files in the "english" directory
+    var files = ['file1.html', 'file2.txt', 'file3.txt','file4.xml'];  // This should be the actual list of files in the "english" directory
 
     files.forEach(function(file) {
         fetch('english/' + file)
