--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     };
 </script>
 </head>
-<body><img src="image/ultrawidefront.jpg" style="width: 100%; height: auto;"/>
+<body><img src="image/girl_front1.png" style="width: 100%; height: auto;"/>
 <!DOCTYPE html>
 
 <html lang="ko">
@@ -350,15 +350,15 @@ yyyy = twoDaysAgo.getFullYear();
 
 twoDaysAgo = mm + '/' + dd + '/' + yyyy;
 
-document.write("Visits the day before yesterday: " + (localStorage[twoDaysAgo] || 0) + " time(s).");
-</script></div><script>
-window.onload = function() {
-    var visitCount = document.getElementById('visitCount');
-    visitCount.style.display = 'block';
-    setTimeout(function() {
-        visitCount.style.display = 'none';
-    }, 3000);
-};
+// document.write("Visits the day before yesterday: " + (localStorage[twoDaysAgo] || 0) + " time(s).");
+// </script></div><script>
+// window.onload = function() {
+//     var visitCount = document.getElementById('visitCount');
+//     visitCount.style.display = 'block';
+//     setTimeout(function() {
+//         visitCount.style.display = 'none';
+//     }, 3000);
+// };
 </script>
 <div id="visitCounter"></div>
 </div></html></body>
