--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
 </div>
 <div class="content">
 <h1>
-    환영합니다!
+    <!-- 환영합니다! -->
    </h1>
 <p>
-    영어 표현을 쉽게 배울 수 있는 웹페이지입니다.
+    <!-- 영어 표현을 쉽게 배울 수 있는 웹페이지입니다. -->
    </p>
 <script>
    var clickCount = 0;
