--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     };
 </script>
 </head>
-<body><img src="image/girl_front1.png" style="width: 100%; height: auto;"/>
+<body><img src="image/girl_front1.png" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
 <!DOCTYPE html>
 
 <html lang="ko">
@@ -230,11 +230,11 @@
 </div>
 <div class="content">
 <h1>
-    <!-- 환영합니다! -->
-   </h1>
+<!-- 환영합니다! -->
+</h1>
 <p>
-    <!-- 영어 표현을 쉽게 배울 수 있는 웹페이지입니다. -->
-   </p>
+<!-- 영어 표현을 쉽게 배울 수 있는 웹페이지입니다. -->
+</p>
 <script>
    var clickCount = 0;
 
