--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     };
 </script>
 </head>
-<body><img src="image/girl_front1.png" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+<body><img src="image/girl_front1.png" style="max-width: 100%; height: auto;"/>
 <!DOCTYPE html>
 
 <html lang="ko">
