--- a/index.html
+++ b/index.html
@@ -18,23 +18,13 @@
         }
     </style>
 <script>
-        document.addEventListener('DOMContentLoaded', (event) => {
-            let visitCount = localStorage.getItem('visitCount');
-            if (!visitCount) {
-                visitCount = 0;
-            }
-            visitCount++;
-            localStorage.setItem('visitCount', visitCount);
-
-            const visitCounter = document.getElementById('visitCounter');
-            visitCounter.innerText = `이 페이지를 ${visitCount}번 방문하셨습니다.`;
-            visitCounter.style.display = 'block';
-
-            setTimeout(() => {
-                visitCounter.style.display = 'none';
-            }, 5000);  // 5 seconds
-        });
-    </script>
+window.onload = function() {
+    var images = ['image/image (1).png', 'image/image (2).png', 'image/image (3).png', 'image/image (4).png', 'image/image (5).png', 'image/image (6).png', 'image/image (7).png', 'image/image (8).png', 'image/image (9).png', 'image/image (10).png', 'image/image (11).png', 'image/image (12).png', 'image/image (13).png', 'image/image (14).png', 'image/image (15).png', 'image/image (16).png', 'image/image (17).png', 'image/image (18).png', 'image/image (19).png', 'image/image (20).png'];
+    var img = document.getElementById('randomImage');
+    var randomIndex = Math.floor(Math.random() * images.length);
+    img.src = images[randomIndex];
+};
+</script>
 <script>
     window.onload = function() {
         var img1 = document.getElementById('img1');
