--- a/index.html
+++ b/index.html
@@ -359,5 +359,12 @@ window.onload = function() {
     var randomIndex = Math.floor(Math.random() * images.length);
     img.src = images[randomIndex];
 };
-</script></body>
+</script><script>
+    window.onload = function() {
+        var images = ['image/image (1).png', 'image/image (2).png', 'image/image (3).png', 'image/image (4).png', 'image/image (5).png', 'image/image (6).png', 'image/image (7).png', 'image/image (8).png', 'image/image (9).png', 'image/image (10).png', 'image/image (11).png', 'image/image (12).png', 'image/image (13).png', 'image/image (14).png', 'image/image (15).png', 'image/image (16).png', 'image/image (17).png', 'image/image (18).png', 'image/image (19).png', 'image/image (20).png', 'image/girl_front1.png', 'image/girl_front2.png'];
+        var img = document.getElementById('randomImage');
+        var randomIndex = Math.floor(Math.random() * images.length);
+        img.src = images[randomIndex];
+    };
+    </script></body>
 </html>
