--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ window.onload = function() {
     };
 </script>
 </head>
-<body><img id="randomImage" src="" style="max-width: 100%; height: auto;"/>
+<body><img id="randomImage" src="" style="max-height: 100%; width: auto;"/>
 <!DOCTYPE html>
 
 <html lang="ko">
