--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ window.onload = function() {
     };
 </script>
 </head>
-<body><img id="randomImage" src="" style="max-height: 100%; width: auto;"/>
+<body><img id="randomImage" src="" style="height: 100vh; width: 100vw; object-fit: cover;"/>
 <!DOCTYPE html>
 
 <html lang="ko">
