--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ window.onload = function() {
     };
 </script>
 </head>
-<body><img id="randomImage" src="" style="height: 100vh; width: 100vw; object-fit: cover;"/>
+<body><img id="randomImage" src="" style="height: 130vh; width: 130vw; object-fit: cover; position: absolute; top: -15vh; left: -15vw;"/>
 <!DOCTYPE html>
 
 <html lang="ko">
