--- a/english.html
+++ b/english.html
@@ -580,5 +580,46 @@ document.addEventListener('click', function(e){
     }
 });
   </script>
- </body>
+ 
+<style>
+body {
+    overflow: hidden;
+}
+
+.firework {
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background: red;
+    animation: explode 1s ease-out;
+}
+
+@keyframes explode {
+    to {
+        transform: scale(30);
+        opacity: 0;
+    }
+}
+</style>
+
+<script>
+var colors = ['red', 'yellow', 'blue', 'green'];
+
+document.addEventListener('click', function(event) {
+    for (var i = 0; i < 20; i++) {
+        var firework = document.createElement('div');
+        firework.className = 'firework';
+        firework.style.top = (event.clientY - 2.5) + 'px';
+        firework.style.left = (event.clientX - 2.5) + 'px';
+        firework.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+        firework.style.transform = 'translate(' + (Math.random() * 200 - 100) + 'px, ' + (Math.random() * 200 - 100) + 'px)';
+        document.body.appendChild(firework);
+        setTimeout(function() {
+            document.body.removeChild(firework);
+        }, 1000);
+    }
+});
+</script>
+</body>
 </html>
