--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ window.onload = function() {
 <a href="english.html">
     버튼 1
    </a>
-<a href="#">
+<a href="project.html">
     버튼 2
    </a>
 </div>
