--- a/english.html
+++ b/english.html
@@ -581,7 +581,7 @@ document.addEventListener('click', function(e){
 });
   </script>
  
-<style>
+<!-- <style>
 .firework {
     position: absolute;
     width: 1px;
@@ -619,7 +619,7 @@ document.addEventListener('click', function(event) {
             document.body.removeChild(firework);
         }, 3000);
     }
-});
+}); -->
 </script>
 </body>
 </html>
