--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ window.onload = function() {
         });
     };
 </script>
-</head>
+<style>.sidebar { background-color: rgba(255, 255, 255, 0.5); }</style></head>
 <body><img id="randomImage" src="" style="height: 130vh; width: 130vw; object-fit: cover; position: absolute; top: -15vh; left: -15vw;"/>
 <!DOCTYPE html>
 
@@ -210,7 +210,7 @@ window.onload = function() {
     padding: 10px 0;
 }
 </style>
-<div class="sidebar" style="left: -200px; transition: left 0.5s;">
+<div class="sidebar" style="left: -200px; transition: left 2s;">
 <a href="english.html">
     버튼 1
    </a>
