--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ window.onload = function() {
 <a href="project.html">
     버튼 2
    </a>
-</div>
+<a href="vba.html">버튼 3</a></div>
 <div class="content">
 <h1>
 <!-- 환영합니다! -->
