--- a/index.html
+++ b/index.html
@@ -3,20 +3,7 @@
 
 <html>
 <head>
-<style>
-        #visitCounter {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #f9f9f9;
-            border: 1px solid #ccc;
-            padding: 15px;
-            text-align: center;
-            z-index: 1000;
-            display: none;
-        }
-    </style>
+<style>.sidebar { background-color: rgba(255, 255, 255, 0.9); }</style>
 <script>
 window.onload = function() {
     var images = ['image/image (1).png', 'image/image (2).png', 'image/image (3).png', 'image/image (4).png', 'image/image (5).png', 'image/image (6).png', 'image/image (7).png', 'image/image (8).png', 'image/image (9).png'];
