--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <html>
 <head>
-<style>.sidebar { background-color: rgba(255, 255, 255, 0.9); }</style>
+<style>
+.sidebar { background-color: rgba(255, 255, 255, 0.1); transition: background-color 0.5s; }
+.sidebar:hover { background-color: rgba(255, 255, 255, 0.1); }
+.sidebar a { background-color: rgba(255, 255, 255, 0.1); }
+</style>
 <script>
 window.onload = function() {
     var images = ['image/image (1).png', 'image/image (2).png', 'image/image (3).png', 'image/image (4).png', 'image/image (5).png', 'image/image (6).png', 'image/image (7).png', 'image/image (8).png', 'image/image (9).png'];
