--- a/index.html
+++ b/index.html
@@ -106,7 +106,12 @@ window.onload = function() {
         });
     };
 </script>
-<style>.sidebar { background-color: rgba(255, 255, 255, 0.5); }</style></head>
+<style>.sidebar { background-color: rgba(255, 255, 255, 0.5); }</style><style>
+@media only screen and (max-width: 600px) {
+    .sidebar { width: 1000px; font-size: 5em; }
+    .sidebar a { font-size: 5em; }
+}
+</style></head>
 <body><img id="randomImage" src="" style="height: 130vh; width: 130vw; object-fit: cover; position: absolute; top: -15vh; left: -15vw;"/>
 <!DOCTYPE html>
 
