--- a/english.html
+++ b/english.html
@@ -597,6 +597,12 @@ document.addEventListener('click', function(e){
         opacity: 0;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+        font-size: 300%;
+    }
+}
 </style>
 
 <script>
