--- a/vba.html
+++ b/vba.html
@@ -208,5 +208,31 @@ document.addEventListener('click', function(event) {
     }
 }); -->
 </script>
+
+<div style="margin: auto; width: 70%; padding: 10px;">
+    <h2 style="text-align: center;">그룹 1</h2>
+
+    <h3 style="text-align: center;">동영상 1</h3>
+    <p style="text-align: center;">이 동영상은 VBA에 대한 기본적인 내용을 다룹니다.</p>
+    <div style="display: flex; justify-content: center;">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/HsNi57gUyQU?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+</div>
+
+<div style="margin: auto; width: 70%; padding: 10px;">
+    <h2 style="text-align: center;">그룹 2</h2>
+
+    <h3 style="text-align: center;">동영상 2</h3>
+    <p style="text-align: center;">이 동영상은 VBA의 고급 기능에 대해 설명합니다.</p>
+    <div style="display: flex; justify-content: center;">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qQMAaJ9qjL4?autoplay=1&mute=1&t=21s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <h3 style="text-align: center;">동영상 3</h3>
+    <p style="text-align: center;">이 동영상은 VBA의 실용적인 사용 사례를 제공합니다.</p>
+    <div style="display: flex; justify-content: center;">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YLu1vEA4Tbs?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+</div>
 </body>
 </html>
