--- a/vba.html
+++ b/vba.html
@@ -88,7 +88,9 @@
   </style>
  </head>
  <body>
-  <header>
+  
+<header style="position: fixed; top: 0; width: 100%; background-color: #f8f9fa; padding: 10px; border-bottom: 1px solid #ddd;">
+
    <a class="home-button" href="index.html">
     Home
    </a>
