--- a/vba.html
+++ b/vba.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html lang="ko">
- <head>
+ 
+<head>
+    <style>
+        .video-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+        .video {
+            flex-basis: calc(33.33% - 30px);
+            margin: 15px;
+        }
+        @media (max-width: 1200px) {
+            .video {
+                flex-basis: calc(50% - 30px);
+            }
+        }
+        @media (max-width: 800px) {
+            .video {
+                flex-basis: calc(100% - 30px);
+            }
+        }
+    </style>
+
   <meta charset="utf-8"/>
   <title>
    VBA 설명
@@ -211,7 +234,7 @@ document.addEventListener('click', function(event) {
 }); -->
 </script>
 
-<div style="margin: auto; width: 70%; padding: 10px;">
+<!-- <div style="margin: auto; width: 70%; padding: 10px;">
     <h2 style="text-align: center;">그룹 1</h2>
 
     <h3 style="text-align: center;">동영상 1</h3>
@@ -234,6 +257,32 @@ document.addEventListener('click', function(event) {
     <p style="text-align: center;">이 동영상은 VBA의 실용적인 사용 사례를 제공합니다.</p>
     <div style="display: flex; justify-content: center;">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YLu1vEA4Tbs?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+</div> -->
+
+<div style="display: flex; justify-content: space-around; margin-top: 100px;">
+    <div style="width: 30%;">
+        <h3 style="text-align: center;">동영상 1</h3>
+        <p style="text-align: center;">이 동영상은 VBA에 대한 기본적인 내용을 다룹니다.</p>
+        <div style="display: flex; justify-content: center;">
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/HsNi57gUyQU?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
+
+    <div style="width: 30%;">
+        <h3 style="text-align: center;">동영상 2</h3>
+        <p style="text-align: center;">이 동영상은 VBA의 고급 기능에 대해 설명합니다.</p>
+        <div style="display: flex; justify-content: center;">
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/qQMAaJ9qjL4?autoplay=1&mute=1&t=21s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
+
+    <div style="width: 30%;">
+        <h3 style="text-align: center;">동영상 3</h3>
+        <p style="text-align: center;">이 동영상은 VBA의 실용적인 사용 사례를 제공합니다.</p>
+        <div style="display: flex; justify-content: center;">
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/YLu1vEA4Tbs?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </div>
 </div>
 </body>
