--- a/vba.html
+++ b/vba.html
@@ -1,7 +1,157 @@
 <!DOCTYPE html>
 <html lang="ko">
  
+
+
+
 <head>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            background-image: url('bg/vba bg1.png');
+            background-size: cover;
+            background-position: center;
+        }
+        .video-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .video {
+            flex-basis: calc(25% - 60px);
+            margin: 15px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
+            transition: all 0.2s ease-in-out;
+            background-color: #fff;
+        }
+        .video:hover {
+            transform: scale(1.02);
+        }
+        .video h3 {
+            color: #333;
+            padding: 15px 0;
+            background-color: #f4f4f4;
+            margin: 0;
+        }
+        .video p {
+            color: #666;
+            padding: 0 15px 15px;
+        }
+        @media (max-width: 1200px) {
+            .video {
+                flex-basis: calc(50% - 60px);
+            }
+        }
+        @media (max-width: 800px) {
+            .video {
+                flex-basis: calc(100% - 60px);
+            }
+        }
+    </style>
+
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            
+            background-size: cover;
+            background-position: center;
+        }
+        .video-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .video {
+            flex-basis: calc(25% - 60px);
+            margin: 15px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
+            transition: all 0.2s ease-in-out;
+            background-color: #fff;
+        }
+        .video:hover {
+            transform: scale(1.02);
+        }
+        .video h3 {
+            color: #333;
+            padding: 15px 0;
+            background-color: #f4f4f4;
+            margin: 0;
+        }
+        .video p {
+            color: #666;
+            padding: 0 15px 15px;
+        }
+        @media (max-width: 1200px) {
+            .video {
+                flex-basis: calc(50% - 60px);
+            }
+        }
+        @media (max-width: 800px) {
+            .video {
+                flex-basis: calc(100% - 60px);
+            }
+        }
+    </style>
+
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            
+            background-size: cover;
+            background-position: center;
+        }
+        .video-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .video {
+            flex-basis: calc(33.33% - 60px);
+            margin: 15px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
+            transition: all 0.2s ease-in-out;
+            background-color: #fff;
+        }
+        .video:hover {
+            transform: scale(1.02);
+        }
+        .video h3 {
+            color: #333;
+            padding: 15px 0;
+            background-color: #f4f4f4;
+            margin: 0;
+        }
+        .video p {
+            color: #666;
+            padding: 0 15px 15px;
+        }
+        @media (max-width: 1200px) {
+            .video {
+                flex-basis: calc(50% - 60px);
+            }
+        }
+        @media (max-width: 800px) {
+            .video {
+                flex-basis: calc(100% - 60px);
+            }
+        }
+    </style>
+
     <style>
         .video-container {
             display: flex;
@@ -154,136 +304,13 @@
    var clickCount = 0;
 
 
-// document.addEventListener('click', function(e){
-//     var numCircles = Math.floor(Math.random() * 1) + 5;  // Random number of circles between 10 and 20
-//     for (var i = 0; i < numCircles; i++) {
-//         var circle = document.createElement('div');
-//         circle.setAttribute('class', 'circle');
-//         document.body.appendChild(circle);
 
-//         var size = (Math.random() * 3) * 100 + 'px';  // Random size between 200% and 500% of original size
-//         circle.style.width = size;
-//         circle.style.height = size;
-
-//         var color = '#' + Math.floor(Math.random()*16777215).toString(16);
-//         circle.style.borderColor = color;
-//         circle.style.borderWidth = '1px';  // Very thin border
-
-//         circle.style.left = (e.pageX - parseInt(size) / 2) + 'px';  // Centered on cursor
-//         circle.style.top = (e.pageY - parseInt(size) / 2) + 'px';  // Centered on cursor
-
-//         var moveX = Math.floor(Math.random() * 5) - 2;  // Random movement in X direction
-//         var moveY = Math.floor(Math.random() * 5) - 2;  // Random movement in Y direction
-//         var intervalID = setInterval(function(){
-//             var left = parseInt(circle.style.left);
-//             var top = parseInt(circle.style.top);
-//             if (isNaN(left) || isNaN(top)) {
-//                 clearInterval(intervalID);
-//             } else {
-//                 circle.style.left = (left + moveX) + 'px';
-//                 circle.style.top = (top + moveY) + 'px';
-//             }
-//         }, 1000);
-
-//         setTimeout(function(){
-//             clearInterval(intervalID);
-//             circle.parentNode.removeChild(circle);
-//         }, 3000);  // Triple the duration
-//     }
-// });
-//   </script>
-<!--  
-<style>
-.firework {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    border-radius: 50%;
-    background: red;
-    animation: explode 3s ease-out;
-}
-
-@keyframes explode {
-    to {
-        transform: scale(30);
-        opacity: 0;
-    }
-}
-</style>
-
-<script>
-var colors = ['#ffb3ba', '#ffdfba', '#ffffba', '#baffc9', '#bae1ff'];
-
-document.addEventListener('click', function(event) {
-    if (event.clientX < 30 || event.clientX > window.innerWidth - 30 ||
-        event.clientY < 30 || event.clientY > window.innerHeight - 30) {
-        return;
-    }
-    for (var i = 0; i < 10; i++) {
-        var firework = document.createElement('div');
-        firework.className = 'firework';
-        firework.style.top = (event.clientY - 0.5) + 'px';
-        firework.style.left = (event.clientX - 0.5) + 'px';
-        firework.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
-        firework.style.transform = 'translate(' + (Math.random() * 200 - 100) + 'px, ' + (Math.random() * 200 - 100) + 'px)';
-        document.body.appendChild(firework);
-        setTimeout(function() {
-            document.body.removeChild(firework);
-        }, 3000);
-    }
-}); -->
 </script>
 
-<!-- <div style="margin: auto; width: 70%; padding: 10px;">
-    <h2 style="text-align: center;">그룹 1</h2>
 
-    <h3 style="text-align: center;">동영상 1</h3>
-    <p style="text-align: center;">이 동영상은 VBA에 대한 기본적인 내용을 다룹니다.</p>
-    <div style="display: flex; justify-content: center;">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/HsNi57gUyQU?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+
+
 </div>
-
-<div style="margin: auto; width: 70%; padding: 10px;">
-    <h2 style="text-align: center;">그룹 2</h2>
-
-    <h3 style="text-align: center;">동영상 2</h3>
-    <p style="text-align: center;">이 동영상은 VBA의 고급 기능에 대해 설명합니다.</p>
-    <div style="display: flex; justify-content: center;">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/qQMAaJ9qjL4?autoplay=1&mute=1&t=21s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-
-    <h3 style="text-align: center;">동영상 3</h3>
-    <p style="text-align: center;">이 동영상은 VBA의 실용적인 사용 사례를 제공합니다.</p>
-    <div style="display: flex; justify-content: center;">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/YLu1vEA4Tbs?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-</div> -->
-
-<div style="display: flex; justify-content: space-around; margin-top: 100px;">
-    <div style="width: 30%;">
-        <h3 style="text-align: center;">동영상 1</h3>
-        <p style="text-align: center;">이 동영상은 VBA에 대한 기본적인 내용을 다룹니다.</p>
-        <div style="display: flex; justify-content: center;">
-            <iframe width="300" height="200" src="https://www.youtube.com/embed/HsNi57gUyQU?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-    </div>
-
-    <div style="width: 30%;">
-        <h3 style="text-align: center;">동영상 2</h3>
-        <p style="text-align: center;">이 동영상은 VBA의 고급 기능에 대해 설명합니다.</p>
-        <div style="display: flex; justify-content: center;">
-            <iframe width="300" height="200" src="https://www.youtube.com/embed/qQMAaJ9qjL4?autoplay=1&mute=1&t=21s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-    </div>
-
-    <div style="width: 30%;">
-        <h3 style="text-align: center;">동영상 3</h3>
-        <p style="text-align: center;">이 동영상은 VBA의 실용적인 사용 사례를 제공합니다.</p>
-        <div style="display: flex; justify-content: center;">
-            <iframe width="300" height="200" src="https://www.youtube.com/embed/YLu1vEA4Tbs?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-    </div>
 </div>
 </body>
 </html>
