--- a/english.html
+++ b/english.html
@@ -603,7 +603,7 @@ document.addEventListener('click', function(e){
     /* Increase the font size on screens smaller than 600px (typical size for mobile phones) */
     @media only screen and (max-width: 600px) {
         body {
-            font-size: 10em;
+            font-size: 10em !important;
         }
     }
     </style>
